--- a/Dự án BTMC/index.html
+++ b/Dự án BTMC/index.html
@@ -43,7 +43,7 @@
 
             if (password === correctPassword) {
                 sessionStorage.setItem("accessGranted", "true"); 
-                window.location.href = "https://hoanglong8.github.io/FoxAI-Data-Analyst"; // Chuyển hướng tới trang GitHub Pages
+                window.location.href = "home.html"; // Chuyển hướng tới trang home
             } else {
                 alert("❌ Mật khẩu không đúng! Vui lòng thử lại.");
             }
